@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package util {
    class "componentized<T>" as componentized {
    }
}

package math {

    '' ========================================================
    '' vec2.h
    '' ========================================================
    class vec2 {
        - x : float
        - y : float
        + constexpr inline vec2(float const X = 0, float const Y = 0)
        + vec2(vec3 const& vec)
        + __attribute__((always_inline)) constexpr inline vec2 operator+(vec2 const other) const
        + __attribute__((always_inline)) constexpr inline vec2 operator-(vec2 const other) const
        + __attribute__((always_inline)) constexpr inline vec2 operator-() const
        + __attribute__((always_inline)) constexpr inline vec2 operator*(float const scalar) const
        + __attribute__((always_inline)) constexpr inline vec2 operator/(float const scalar) const
        + __attribute__((always_inline)) constexpr inline vec2 &operator+=(vec2 const other)
        + __attribute__((always_inline)) constexpr inline vec2 &operator-=(vec2 const other)
        + __attribute__((always_inline)) constexpr inline vec2 &operator*=(float const scalar)
        + __attribute__((always_inline)) constexpr inline vec2 &operator/=(float const scalar)
        + __attribute__((always_inline)) constexpr inline bool operator==(vec2 const other) const
        + __attribute__((always_inline)) constexpr inline bool operator!=(vec2 const other) const
        + {static} float dot_product(vec2 const first, vec2 const second)
        + {static} float cross_product(vec2 const first, vec2 const second)
        + float len() const
        + float sqr_len() const
        + vec2 const normalized() const
        + vec2 const perpendicular() const
        + float angle() const
        + {static} float angle_between(vec2 const first, vec2 const second)
        + {static} vec2 const rotate(vec2 const vec, float const angle)
        + {static} vec2 const rotate_with_known_trig(vec2 const vec, float const cos, float const sin)
        -- Friends --
        friend util::componentized<vec2>
    }

    '' ========================================================
    '' vec3.h
    '' ========================================================
    class vec3 {
        - x : float
        - y : float
        - z : float
        + constexpr inline vec3(float const X = 0, float const Y = 0, float const Z = 0)
        + constexpr inline vec3(vec2 const flat, float const Z = 0)
        + __attribute__((always_inline)) constexpr inline vec3 const operator+(vec3 const other) const
        + __attribute__((always_inline)) constexpr inline vec3 const operator-(vec3 const other) const
        + __attribute__((always_inline)) constexpr inline vec3 const operator-() const
        + __attribute__((always_inline)) constexpr inline vec3 const operator*(float const scalar) const
        + __attribute__((always_inline)) constexpr inline vec3 const operator/(float const scalar) const
        + __attribute__((always_inline)) constexpr inline vec3 &operator+=(vec3 const other)
        + __attribute__((always_inline)) constexpr inline vec3 &operator-=(vec3 const other)
        + __attribute__((always_inline)) constexpr inline vec3 &operator*=(float const scalar)
        + __attribute__((always_inline)) constexpr inline vec3 &operator/=(float const scalar)
        + __attribute__((always_inline)) constexpr inline bool operator==(vec3 const other) const
        + __attribute__((always_inline)) constexpr inline bool operator!=(vec3 const other) const
        + {static} constexpr float dot_product(vec3 const first, vec3 const second)
        + {static} constexpr vec3 const cross_product(vec3 const first, vec3 const second)
        + constexpr float len() const
        + constexpr float sqr_len() const
        + constexpr vec3 const normalized() const
        -- Friends --
        friend util::componentized<vec3>
    }

    '' ========================================================
    '' segment.h
    '' ========================================================
    class segment {
        - point0 : vec2
        - point1 : vec2
        + constexpr segment(vec2 const p0, vec2 const p1)
        + __attribute__((always_inline)) constexpr inline bool operator==(segment const other) const
        + __attribute__((always_inline)) constexpr inline bool operator!=(segment const other) const
        + float angle() const
        + constexpr vec2 const midpoint() const
        + float len() const
        + float sqr_len() const
        -- Friends --
        friend util::componentized<segment>
    }

    '' ========================================================
    '' ray2.h
    '' ========================================================
    class ray2 {
        + end : vec2
        + direction : vec2
        + constexpr ray2(vec2 const e, vec2 const d)
        + __attribute__((always_inline)) constexpr inline bool operator==(ray2 const other) const
        + __attribute__((always_inline)) constexpr inline bool operator!=(ray2 const other) const
        + {static} ray2 const rotate(ray2 const ray, float const angle)
        + bool intersects(segment const seg, vec2 &hit_point, float &distance, float &seg_len) const
    }
}

'' Inheritance
util::componentized <|-- vec2
util::componentized <|-- vec3
util::componentized <|-- segment

'' Dependencies
vec2 ..> vec3
vec3 ..> vec2
segment ..> vec2
ray2 ..> vec2
ray2 ..> segment

@enduml